fix(defaults): fix color overlapping in syntax highlighted code

--- a/mizui/defaults/_content.scss
+++ b/mizui/defaults/_content.scss
@@ -64,7 +64,9 @@ article {
     overflow-x: auto;
 
     code {
-      // font-family: $font-family-monospace;
+      @extend .cr-in;
+      @extend .bg-in;
+      @extend .pn;
       letter-spacing: -0.022em;
       white-space: pre-wrap;
       line-height: 1.18;
